<resources>
    <string name="app_name">Coup V2</string>
    <string name="create_game">Create Game</string>
    <string name="join_game">Join Game</string>
    <string name="instructions">Instructions</string>
    <string name="friends_stats">Friends/Stats</string>
    <string name="game_icon_description">Game Icon</string>
    <string name="ambassador" />
    <string name="contra" />
    <string name="duke" />
    <string name="captain" />
    <string name="assassin" />
    <string name="back_button_description">Go back</string>

    <string name="win_button_text">WIN</string>
        <string name="loss_button_text">LOSS</string>


</resources>
