<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:background="#FFC0CB"> <!-- Replace with your desired background color -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="COUP V2"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:gravity="center" />

<!--    <ImageView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--&lt;!&ndash;        android:src="@drawable/game_icon" &lt;!&ndash; Replace with your actual drawable resource &ndash;&gt;&ndash;&gt;-->
<!--    android:contentDescription="@string/game_icon_description"-->
<!--    android:layout_marginBottom="24dp" />-->

    <Button
        android:id="@+id/button_create_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_game"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/button_join_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join_game"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/button_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/button_friends_stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/friends_stats"
        android:layout_marginBottom="16dp" />
</LinearLayout>
