<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">





    <!-- HorizontalScrollView to make the images scrollable from left to right -->
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <!-- Assassin Card -->

            <!-- Captain Card -->

            <!-- Duke Card -->
            <ImageButton
                android:id="@+id/assassin"
                android:layout_width="565dp"
                android:layout_height="620dp"
                android:layout_margin="16dp"
                android:background="@null"
                android:contentDescription="@string/assassin"
                android:scaleType="fitCenter"
                android:src="@drawable/assassin1" />

            <ImageButton
                android:id="@+id/captain"
                android:layout_width="565dp"
                android:layout_height="620dp"
                android:layout_margin="16dp"
                android:background="@null"
                android:contentDescription="@string/captain"
                android:scaleType="fitCenter"
                android:src="@drawable/captain1" />

            <ImageButton
                android:id="@+id/duke"
                android:layout_width="565dp"
                android:layout_height="620dp"
                android:layout_margin="16dp"
                android:background="@null"
                android:contentDescription="@string/duke"
                android:scaleType="fitCenter"
                android:src="@drawable/duke1" />

            <!-- Contra Card -->
            <ImageButton
                android:id="@+id/contra"
                android:layout_width="565dp"
                android:layout_height="620dp"
                android:layout_margin="16dp"
                android:background="@null"
                android:contentDescription="@string/ambassador"
                android:scaleType="fitCenter"
                android:src="@drawable/contra1" />

            <!-- Ambassador Card -->
            <ImageButton
                android:id="@+id/ambassador"
                android:layout_width="565dp"
                android:layout_height="620dp"
                android:layout_margin="16dp"
                android:background="@null"
                android:contentDescription="@string/contra"
                android:scaleType="fitCenter"
                android:src="@drawable/ambassador1" />

        </LinearLayout>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>